# lambda-study

./: CMakeLists.txt
src/: anatomy.h  main.cpp  multiplier.h  printer.h  stateless_lambdas copy.h  stateless_lambdas.h
tests/: CMakeLists.txt  example_test.cpp
